Minor edits and style changes, in particular fixing problem with math images not showing.

--- a/galeracluster/source/_static/basic-style.css
+++ b/galeracluster/source/_static/basic-style.css
@@ -15,35 +15,6 @@ div.clearer {
     clear: both;
 }
 
-/* -- relbar ---------------------------------------------------------------- */
-
-div.related {
-    width: 100%;
-    font-size: 90%;
-}
-
-div.related h3 {
-    display: none;
-}
-
-div.related ul {
-    margin: 0;
-    padding: 0 0 0 10px;
-    list-style: none;
-}
-
-div.related li {
-    display: inline;
-}
-
-div.related li.right {
-    float: right;
-    margin-right: 5px;
-}
-
-img {
-    border: 0;
-}
 
 /* -- search page ----------------------------------------------------------- */
 
